FIX: z-index header and sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ nav ul li a:hover {
   top: 0;
   right: -250px;
   transition: 0.3s;
-  z-index: 1;
+  z-index: 3;
 }
 .sidebar.show {
   right: 0;
